# reachy-aim-enterprise-demo

./: .env  .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  audio-fix-reachy.md  audio-setup.md  audio-troubleshooting.md  demo-script.md  direct-commands.md  enterprise-latency-behavior.md  gesture-mapping-quick-reference.md  gesture-mapping.md  latency-aware-gestures-summary.md  latency-budget.md  reachy-mini-gestures-summary.md  testing-latency-gestures.md  troubleshooting.md  tts-implementation.md  tts-status.md
helm/reachy-demo-addons/: Chart.yaml  README.md  values.yaml
helm/reachy-demo-addons/templates/: NOTES.txt  _helpers.tpl  configmap-prompts.yaml  grafana-dashboard-configmap.yaml  ingress.yaml  job-loadgen.yaml
src/reachy_aim_enterprise_demo.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/reachy_demo/: config.py  demo_suite.py  main.py
src/reachy_demo/adapters/: robot_base.py  robot_rest.py  robot_sim.py
src/reachy_demo/aim/: client.py  errors.py  models.py
src/reachy_demo/gestures/: __init__.py  motion.py
src/reachy_demo/obs/: metrics.py
src/reachy_demo/orchestrator/: gesture_mapping.py  loop.py  prompts.py
src/reachy_demo/policy/: __init__.py  latency_policy.py
src/reachy_demo/tools/: calibrate_home.py  discover_recorded_moves.py  loadgen_local.py  test_gesture_mapping.py  test_latency_gestures.py  test_tts.py
tests/: test_config.py
tools/: diagnose_latency.py  monitor_metrics.py  monitor_metrics.sh  query_metrics.py
(+2 files in other folders)
